@@ -316,6 +316,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoregisterPerWebRequestLifestyleModule.cs" />
+    <Compile Include="Core\Internal\Constants.cs" />
     <Compile Include="Core\Internal\SimpleSortedSet.cs" />
     <Compile Include="Core\CastleComponentAttribute.cs" />
     <Compile Include="Core\ComponentActivatorAttribute.cs" />
@@ -759,6 +760,7 @@
     </Compile>
     <Compile Include="MicroKernel\IHandlerSelector.cs" />
     <Compile Include="MicroKernel\Resolvers\ILazyComponentLoader.cs" />
+    <Compile Include="MicroKernel\SubSystems\Naming\IExposeDefaultComponentsForServices.cs" />
     <Compile Include="MicroKernel\SubSystems\Naming\INamingSubSystem.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -860,6 +862,7 @@
     </Compile>
     <Compile Include="Windsor\Experimental\Diagnostics\AllComponentsDiagnostic.cs" />
     <Compile Include="Windsor\Experimental\Diagnostics\DebuggerViews\ReleasePolicyTrackedObjectsDebuggerViewItem.cs" />
+    <Compile Include="Windsor\Experimental\Diagnostics\Extensions\DefaultComponentPerService.cs" />
     <Compile Include="Windsor\Experimental\Diagnostics\Helpers\DescriptionUtil.cs" />
     <Compile Include="Windsor\Experimental\Diagnostics\Extensions\ReleasePolicyTrackedObjects.cs" />
     <Compile Include="Windsor\Experimental\Diagnostics\DebuggerViews\ComponentStatusDebuggerViewItem.cs" />
